syntax = "proto3";

option go_package = "sportshot/utils/proto";

package event;

service EventService {
  rpc SearchEvents  (SearchEventsRequest) returns (EventsReply) {}
}

message SearchEventsRequest {
  string LeagueName = 1;
  string HomeName = 2;
  string AwayName = 3;
  string SportType = 4;
  string StartDate = 5;
  string EndDate = 6;
}

message EventInfo {
  string leagueName = 1;
  string raceTime = 2;
  string homeName = 3;
  string score = 4;
  string awayName = 5;
  string homeOdds = 6;
  string awayOdds = 7;
  string date = 8;
  int64 timestamp = 9;
}

message EventsReply {
  repeated EventInfo events = 1;
  int32 Count = 3;
}
